--- a/payapp/templates/pagodigital/pagodigital.html
+++ b/payapp/templates/pagodigital/pagodigital.html
@@ -5,9 +5,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-      <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-      <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato:300,400,700&display=swap">
-      <link rel="stylesheet" href="/static/pagodigital/css/app.min.css">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap">
+      <link rel="stylesheet" href="css/app.min.css">
 
       <title>HotGo</title>
   </head>
@@ -24,7 +24,7 @@
           <hr>
         </div>
       </div>
-      <form>
+      <form id="payment_form">
         <div class="form-row">
           <div class="form-group col">
             <input type="text" class="form-control pd-control" name="name" id="name" placeholder="Nombre del Titular" autofocus>
@@ -37,7 +37,7 @@
         </div>
         <div class="form-row">
           <div class="form-group col">
-            <input type="text" class="form-control pd-control credit-card" name="cc_number" id="cc_number" placeholder="Número de Tarjeta">
+            <input type="tel" class="form-control pd-control credit-card" name="cc_number" id="cc_number" placeholder="Número de Tarjeta">
           </div>
         </div>
         <div class="form-row">
@@ -45,17 +45,16 @@
             <input type="text" class="form-control pd-control" name="cc_expiration" id="cc_expiration" placeholder="Fecha de Expiración">
           </div>
           <div class="form-group col-6">
-            <input type="number" class="form-control pd-control" name="cc_cvv" id="cc_cvv" placeholder="Código de Seguridad">
+            <input type="tel" class="form-control pd-control" name="cc_cvv" id="cc_cvv" placeholder="Código de Seguridad">
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col">
-            <input type="number" class="form-control pd-control" name="id_card" id="id_card" placeholder="Cédula">
+            <input type="tel" class="form-control pd-control" name="id_card" id="id_card" placeholder="Cédula">
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col-6">
-            <!-- <input type="text" class="form-control pd-control" name="state" id="state" placeholder="Departamento"> -->
             <select class="form-control pd-control" name="state" id="state">
               <option value="" disabled selected>Departamento</option>
             </select>
@@ -72,6 +71,12 @@
         <div class="form-row">
           <div class="form-group col">
             <input type="tel" class="form-control pd-control" name="phone" id="phone" placeholder="Teléfono">
+            <input type="hidden" id="user_id" name="user_id" value="{{ user_id }}">
+            <input type="hidden" id="token" name="token" value="{{ token }}">
+            <input type="hidden" id="cc_exp_month" name="cc_exp_month" value="">
+            <input type="hidden" id="cc_exp_year" name="cc_exp_year" value="">
+            <input type="hidden" id="cc_fr_number" name="cc_fr_number" value="">
+            <input type="hidden" id="cc_fr_name" name="cc_fr_name" value="">
           </div>
         </div>
         <div class="form-row">
@@ -81,20 +86,21 @@
         </div>
         <div class="form-row">
           <div class="form-group col">
-            <button class="btn btn-pd btn-block" type="submit">Pagar</button>
+            <button class="btn btn-pd btn-block" type="submit">Suscribirse</button>
           </div>
         </div>
       </form>
     </div>
 
-    <script src="//code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="/static/pagodigital/js/vendor/moment.js"></script>
-    <script src="/static/pagodigital/js/vendor/cleave.min.js"></script>
-    <script src="/static/pagodigital/js/vendor/cleave-phone.co.js"></script>
-    <script src="/static/pagodigital/js/vendor/typeahead.jquery.min.js"></script>
-    <script src="/static/pagodigital/js/vendor/bloodhound.min.js"></script>
-    <script src="/static/pagodigital/js/app.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="js/vendor/moment.js"></script>
+    <script src="js/vendor/cleave.min.js"></script>
+    <script src="js/vendor/cleave-phone.co.js"></script>
+    <script src="js/vendor/typeahead.jquery.min.js"></script>
+    <script src="js/vendor/bloodhound.min.js"></script>
+    <script src="js/vendor/validate.min.js"></script>
+    <script src="js/app.min.js"></script>
   </body>
 </html>
