--- a/payapp/templates/pagodigital/pagodigital.html
+++ b/payapp/templates/pagodigital/pagodigital.html
@@ -7,7 +7,7 @@
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap">
-      <link rel="stylesheet" href="css/app.min.css">
+      <link rel="stylesheet" href="/static/pagodigital/css/app.min.css">
 
       <title>HotGo</title>
   </head>
@@ -95,12 +95,12 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="js/vendor/moment.js"></script>
-    <script src="js/vendor/cleave.min.js"></script>
-    <script src="js/vendor/cleave-phone.co.js"></script>
-    <script src="js/vendor/typeahead.jquery.min.js"></script>
-    <script src="js/vendor/bloodhound.min.js"></script>
-    <script src="js/vendor/validate.min.js"></script>
-    <script src="js/app.min.js"></script>
+    <script src="/static/pagodigital/js/vendor/moment.js"></script>
+    <script src="/static/pagodigital/js/vendor/cleave.min.js"></script>
+    <script src="/static/pagodigital/js/vendor/cleave-phone.co.js"></script>
+    <script src="/static/pagodigital/js/vendor/typeahead.jquery.min.js"></script>
+    <script src="/static/pagodigital/js/vendor/bloodhound.min.js"></script>
+    <script src="/static/pagodigital/js/vendor/validate.min.js"></script>
+    <script src="/static/pagodigital/js/app.min.js"></script>
   </body>
 </html>
