--- a/payapp/templates/pagodigital/pagodigital.html
+++ b/payapp/templates/pagodigital/pagodigital.html
@@ -32,12 +32,12 @@
         </div>
         <div class="form-row">
           <div class="form-group col">
-            <input type="email" class="form-control pd-control" name="email" id="email" placeholder="Email">
+            <input type="email" class="form-control pd-control" name="email" id="email" placeholder="Email" value="{{ email }}">
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col">
-            <input type="tel" class="form-control pd-control credit-card" name="cc_number" id="cc_number" placeholder="Número de Tarjeta">
+            <input type="tel" class="form-control pd-control credit-card" name="cc_num" id="cc_num" placeholder="Número de Tarjeta">
           </div>
         </div>
         <div class="form-row">
@@ -77,6 +77,7 @@
             <input type="hidden" id="cc_exp_year" name="cc_exp_year" value="">
             <input type="hidden" id="cc_fr_number" name="cc_fr_number" value="">
             <input type="hidden" id="cc_fr_name" name="cc_fr_name" value="">
+            <input type="hidden" id="cc_number" name="cc_number" value="">
           </div>
         </div>
         <div class="form-row">
