--- a/payapp/templates/pagodigital/pagodigital.html
+++ b/payapp/templates/pagodigital/pagodigital.html
@@ -24,7 +24,7 @@
           <hr>
         </div>
       </div>
-      <form id="payment_form" autocomplete="nope">
+      <form id="payment_form" autocomplete="off">
         <div class="form-row">
           <div class="form-group col">
             <input type="text" class="form-control pd-control" name="name" id="name" placeholder="Nombre del Titular" autofocus>
@@ -60,7 +60,9 @@
             </select>
           </div>
           <div class="form-group col-xs-12 col-md-6">
-            <input type="text" class="form-control pd-control" name="city" id="city" placeholder="Ciudad" autocomplete="nope" readonly>
+            <select class="form-control pd-control" name="city" id="city" readonly>
+            <option value="" disabled selected>Ciudad</option>
+          </select>
           </div>
         </div>
         <div class="form-row">
