--- a/payapp/templates/base.html
+++ b/payapp/templates/base.html
@@ -73,7 +73,8 @@
 
   <div class="preloader"></div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
   <script src="https://momentjs.com/downloads/moment-with-locales.min.js"></script>
